Fixes live text

--- a/_sidebar.liquid
+++ b/_sidebar.liquid
@@ -1,14 +1,12 @@
-        <!--
-        <h2>Direct</h2>
+        <!-- <h2>Direct</h2> -->
 
-        <p>
-          Le Mercredi de 20h à 22h
-        </p>
+        <!-- <p> -->
+        <!--   Le Mercredi de 21h à 22h30 -->
+        <!-- </p> -->
 
-        <div class="ui360"><a href="http://stream.tryphon.eu/improbable-podcast.mp3" title="Ecouter en direct">En direct jusqu'à 22h</a></div>
+        <!-- <div class="ui360"><a href="http://stream.tryphon.eu/improbable-podcast.mp3" title="Ecouter en direct">En direct jusqu'à 22h30</a></div> -->
 
-        Ecouter en <a href="http://stream.tryphon.eu/improbable-podcast.mp3.m3u">MP3</a> 
-        -->
+        <!-- Ecouter en <a href="http://stream.tryphon.eu/improbable-podcast.mp3.m3u">MP3</a>  -->
 
         <h2>Podcast</h2>
 
