Add links to facebook and twitter. Display last tweets from @improbablepodca

--- a/_head.liquid
+++ b/_head.liquid
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/360-player/360player-visualization.css"/>
 
     <script src="{{theme.url_for_assets}}/javascripts/prototype.min.js"></script>
+    <script src="{{theme.url_for_assets}}/javascripts/application.js"></script>
 
     <script src="/javascripts/soundmanager2.js"></script>
     <script src="/javascripts/360player.js"></script>
