--- a/_sidebar.liquid
+++ b/_sidebar.liquid
@@ -27,8 +27,15 @@
         <ul class="social-medias">
           <!--
           <li class="itunes"><a href="http://itunes.apple.com/podcast/la-radio-des-jeux/id343200920">iTunes</a></li>
-          <li class="facebook"><a href="http://www.facebook.com/pages/La-Radio-des-Jeux/183265270527">FaceBook</a></li>
           -->
           <li class="rss"><a href="{{show.url_for_podcast}}">Feed RSS</a></li>
+          <li class="facebook"><a href="https://www.facebook.com/pages/Limprobable-podcast/353673997994138">FaceBook</a></li>
+          <li class="twitter"><a href="http://twitter.com/improbablepodca">Twitter</a></li>
         </ul>
+
+        <h2>Sur Twitter</h2>
+
+        <div class="twitter">
+          
+        </div>
 
