--- a/_sidebar.liquid
+++ b/_sidebar.liquid
@@ -39,3 +39,13 @@
           
         </div>
 
+        <span id="twitter-follow"/>
+
+        <script type="text/javascript">
+          twttr.anywhere(function (T) {
+            T('#twitter-follow').followButton("improbablepodca");
+          });
+        </script>
+
+
+
