--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -112,7 +112,7 @@ body.show ul.episodes li img {
     margin-right: 10px;
 }
 
-body.show ul.episodes li h3, body.show div.posts h3 {
+body.show ul.episodes li h3, body.show div.posts h3, body.show div.live h3 {
     margin-bottom: 5px;
     color: #7D1B7F;
     font-size: 1.5em;
@@ -250,9 +250,49 @@ body.episode #content #disqus_thread {
 }
 
 #sidebar div.twitter {
-  font-size: 0.9em;  
+  font-size: 0.9em; 
+  margin-bottom: 10px;
 }
 
 #sidebar div.twitter li {
   margin: 5px 0;
 }
+
+#content .live .twitter-box {
+  margin-top: 20px;
+}
+#content .live .twtr-widget {
+  clear: both;
+}
+
+#content .live .ui360 {
+    margin-left: 15px;
+}
+
+#content .live .ui360 a {
+    font-size: 1.2em;
+    color: #7d1b7f;
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-top: -25px;
+}
+
+#content .live .ui360 a strong {
+    font-size: 1.5em;
+    color: #ec75a7;
+    font-weight: bold;
+}
+
+#content .live .m3u {
+  text-align: center;
+  margin: 15px;
+}
+
+#content .live .m3u a {
+  color: #7D1B7F;
+  text-decoration: underline;
+  background: transparent url('../images/vlc.png') no-repeat scroll center left;
+  padding-left: 20px;
+}
+
+
