--- a/show.liquid
+++ b/show.liquid
@@ -14,6 +14,21 @@
           {{show.description | textilize}}
         </div>
 
+        <iframe id="live" src="" width="600px" height="700px" scrolling="no" frameborder="0" style="display: none;"></iframe>
+        <script type="text/javascript">
+          function stream_status(status) {
+            console.log("status: up=" + status.up);
+            if (status.up) {
+              $('live').src = "/direct";
+              $('live').show();
+            } else {
+              $('live').hide();
+              $('live').src = "";
+            }
+          }
+        </script>
+        <script type="text/javascript" src="http://console.tryphon.eu/streams/5/status.js?callback=stream_status&refresh=60"></script>
+
         <div class="posts">
           {% for post in show.posts limit:1 %}
           <h3>{{ post.title }}</h3>
