--- a/show.liquid
+++ b/show.liquid
@@ -17,7 +17,6 @@
         <iframe id="live" src="" width="600px" height="700px" scrolling="no" frameborder="0" style="display: none;"></iframe>
         <script type="text/javascript">
           function stream_status(status) {
-            console.log("status: up=" + status.up);
             if (status.up) {
               $('live').src = "/direct";
               $('live').show();
@@ -27,7 +26,7 @@
             }
           }
         </script>
-        <script type="text/javascript" src="http://console.tryphon.eu/streams/5/status.js?callback=stream_status&refresh=60"></script>
+        <script type="text/javascript" src="http://console.tryphon.eu/streams/6/status.js?callback=stream_status&refresh=60" defer="true"></script>
 
         <div class="posts">
           {% for post in show.posts limit:1 %}
