--- a/show.liquid
+++ b/show.liquid
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
   <head>
-    {% include 'improbablepodcast/head' %}
+    {% include 'head' %}
     <title>{{show.name}} - Bonnes Ondes</title>
   </head>
 
   <body class="show">
     <div id="page">
-      {% include 'improbablepodcast/header' %}
+      {% include 'header' %}
 
       <div id="content">
         <div class="description">
@@ -53,10 +53,10 @@
       </div>
 
       <div id="sidebar">
-        {% include 'improbablepodcast/sidebar' %}
+        {% include 'sidebar' %}
       </div>
 
-      {% include 'improbablepodcast/footer' %}
+      {% include 'footer' %}
     </div>
   </body>
 </html>
