Use player.tryphon.eu player

--- a/_head.liquid
+++ b/_head.liquid
@@ -2,47 +2,8 @@
     <link href="{{theme.url_for_assets}}/stylesheets/screen.css" media="screen" rel="stylesheet" type="text/css" />
     <link rel="alternate" type="application/rss+xml" title="Podcast de {{show.name}}" href="{{show.url_for_podcast}}"/>
 
-    <script src="/javascripts/animator.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="/360-player/360player.css"/>
-    <link rel="stylesheet" type="text/css" href="/360-player/360player-visualization.css"/>
 
     <script src="{{theme.url_for_assets}}/javascripts/prototype.min.js"></script>
     <script src="{{theme.url_for_assets}}/javascripts/application.js"></script>
 
-    <script src="https://platform.twitter.com/anywhere.js?id=NB6w10k567glsyr7fKRJiQ&v=1" type="text/javascript"></script>
-
-    <script type="text/javascript">
-      twttr.anywhere.config({ callbackURL: "{{ show.url_for }}" });
-    </script>               
-
-    <script src="/javascripts/soundmanager2.js"></script>
-    <script src="/javascripts/360player.js"></script>
-    <script>
-      soundManager.url = "/flash/";
-
-      soundManager.useFastPolling = true; // increased JS callback frequency, combined with useHighPerformance = true
-
-      threeSixtyPlayer.config.loadRingColor = "#ddd";
-
-      threeSixtyPlayer.config.scaleFont = (navigator.userAgent.match(/msie/i)?false:true);
-      threeSixtyPlayer.config.showHMSTime = true;
-
-      // enable some spectrum stuffs
-
-      threeSixtyPlayer.config.useWaveformData = true;
-      threeSixtyPlayer.config.useEQData = true;
-
-      // enable this in SM2 as well, as needed
-
-      if (threeSixtyPlayer.config.useWaveformData) {
-      soundManager.flash9Options.useWaveformData = true;
-      }
-      if (threeSixtyPlayer.config.useEQData) {
-      soundManager.flash9Options.useEQData = true;
-      }
-      if (threeSixtyPlayer.config.usePeakData) {
-      soundManager.flash9Options.usePeakData = true;
-      }
-      soundManager.debugMode = true;
-    </script>
+    <script src="http://player.tryphon.eu/player.js"></script>
