--- a/show.liquid
+++ b/show.liquid
@@ -26,7 +26,7 @@
             }
           }
         </script>
-        <script type="text/javascript" src="http://console.tryphon.eu/streams/6/status.js?callback=stream_status&refresh=60" defer="true"></script>
+        <script type="text/javascript" src="http://console.tryphon.eu/streams/6/status.js?callback=stream_status" defer="true"></script>
 
         <div class="posts">
           {% for post in show.posts limit:1 %}
